// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Token with config it should be comment 1`] = `
[
  {
    "range": {
      "end": {
        "column": 16,
        "line": 2,
      },
      "start": {
        "column": 7,
        "line": 2,
      },
    },
    "type": "BLOCK_COMMENT",
    "value": "/* 行内注释 */",
  },
  {
    "range": {
      "end": {
        "column": 8,
        "line": 5,
      },
      "start": {
        "column": 7,
        "line": 3,
      },
    },
    "type": "BLOCK_COMMENT",
    "value": "/*
      块级注释
      */",
  },
]
`;

exports[`Token with config it should be custom code 1`] = `
[
  {
    "range": {
      "end": {
        "column": 22,
        "line": 2,
      },
      "start": {
        "column": 7,
        "line": 2,
      },
    },
    "type": "LINE_COMMENT",
    "value": "// test function",
  },
  {
    "range": {
      "end": {
        "column": 14,
        "line": 3,
      },
      "start": {
        "column": 7,
        "line": 3,
      },
    },
    "type": "IDENTIFIER",
    "value": "function",
  },
  {
    "range": {
      "end": {
        "column": 19,
        "line": 3,
      },
      "start": {
        "column": 16,
        "line": 3,
      },
    },
    "type": "IDENTIFIER",
    "value": "test",
  },
  {
    "range": {
      "end": {
        "column": 20,
        "line": 3,
      },
      "start": {
        "column": 20,
        "line": 3,
      },
    },
    "type": "LEFT_PAREN",
    "value": "(",
  },
  {
    "range": {
      "end": {
        "column": 21,
        "line": 3,
      },
      "start": {
        "column": 21,
        "line": 3,
      },
    },
    "type": "IDENTIFIER",
    "value": "a",
  },
  {
    "range": {
      "end": {
        "column": 22,
        "line": 3,
      },
      "start": {
        "column": 22,
        "line": 3,
      },
    },
    "type": "COMMA",
    "value": ",",
  },
  {
    "range": {
      "end": {
        "column": 24,
        "line": 3,
      },
      "start": {
        "column": 24,
        "line": 3,
      },
    },
    "type": "IDENTIFIER",
    "value": "b",
  },
  {
    "range": {
      "end": {
        "column": 25,
        "line": 3,
      },
      "start": {
        "column": 25,
        "line": 3,
      },
    },
    "type": "RIGHT_PAREN",
    "value": ")",
  },
  {
    "range": {
      "end": {
        "column": 27,
        "line": 3,
      },
      "start": {
        "column": 27,
        "line": 3,
      },
    },
    "type": "LEFT_CURLY_BRACE",
    "value": "{",
  },
  {
    "range": {
      "end": {
        "column": 15,
        "line": 4,
      },
      "start": {
        "column": 9,
        "line": 4,
      },
    },
    "type": "IDENTIFIER",
    "value": "console",
  },
  {
    "range": {
      "end": {
        "column": 16,
        "line": 4,
      },
      "start": {
        "column": 16,
        "line": 4,
      },
    },
    "type": "DOT",
    "value": ".",
  },
  {
    "range": {
      "end": {
        "column": 19,
        "line": 4,
      },
      "start": {
        "column": 17,
        "line": 4,
      },
    },
    "type": "IDENTIFIER",
    "value": "log",
  },
  {
    "range": {
      "end": {
        "column": 20,
        "line": 4,
      },
      "start": {
        "column": 20,
        "line": 4,
      },
    },
    "type": "LEFT_PAREN",
    "value": "(",
  },
  {
    "range": {
      "end": {
        "column": 21,
        "line": 4,
      },
      "start": {
        "column": 21,
        "line": 4,
      },
    },
    "type": "IDENTIFIER",
    "value": "a",
  },
  {
    "range": {
      "end": {
        "column": 22,
        "line": 4,
      },
      "start": {
        "column": 22,
        "line": 4,
      },
    },
    "type": "RIGHT_PAREN",
    "value": ")",
  },
  {
    "range": {
      "end": {
        "column": 14,
        "line": 5,
      },
      "start": {
        "column": 9,
        "line": 5,
      },
    },
    "type": "IDENTIFIER",
    "value": "return",
  },
  {
    "range": {
      "end": {
        "column": 16,
        "line": 5,
      },
      "start": {
        "column": 16,
        "line": 5,
      },
    },
    "type": "IDENTIFIER",
    "value": "a",
  },
  {
    "range": {
      "end": {
        "column": 18,
        "line": 5,
      },
      "start": {
        "column": 18,
        "line": 5,
      },
    },
    "type": "PLUS",
    "value": "+",
  },
  {
    "range": {
      "end": {
        "column": 20,
        "line": 5,
      },
      "start": {
        "column": 20,
        "line": 5,
      },
    },
    "type": "IDENTIFIER",
    "value": "b",
  },
  {
    "range": {
      "end": {
        "column": 21,
        "line": 5,
      },
      "start": {
        "column": 21,
        "line": 5,
      },
    },
    "type": "SEMI_COLON",
    "value": ";",
  },
  {
    "range": {
      "end": {
        "column": 7,
        "line": 6,
      },
      "start": {
        "column": 7,
        "line": 6,
      },
    },
    "type": "RIGHT_CURLY_BRACE",
    "value": "}",
  },
  {
    "range": {
      "end": {
        "column": 12,
        "line": 7,
      },
      "start": {
        "column": 7,
        "line": 7,
      },
    },
    "type": "IDENTIFIER",
    "value": "concat",
  },
  {
    "range": {
      "end": {
        "column": 13,
        "line": 7,
      },
      "start": {
        "column": 13,
        "line": 7,
      },
    },
    "type": "LEFT_PAREN",
    "value": "(",
  },
  {
    "range": {
      "end": {
        "column": 15,
        "line": 7,
      },
      "start": {
        "column": 14,
        "line": 7,
      },
    },
    "type": "IDENTIFIER",
    "value": "接口",
  },
  {
    "range": {
      "end": {
        "column": 16,
        "line": 7,
      },
      "start": {
        "column": 16,
        "line": 7,
      },
    },
    "type": "DOT",
    "value": ".",
  },
  {
    "range": {
      "end": {
        "column": 17,
        "line": 7,
      },
      "start": {
        "column": 17,
        "line": 7,
      },
    },
    "type": "IDENTIFIER",
    "value": "姓",
  },
  {
    "range": {
      "end": {
        "column": 18,
        "line": 7,
      },
      "start": {
        "column": 18,
        "line": 7,
      },
    },
    "type": "COMMA",
    "value": ",",
  },
  {
    "range": {
      "end": {
        "column": 21,
        "line": 7,
      },
      "start": {
        "column": 20,
        "line": 7,
      },
    },
    "type": "IDENTIFIER",
    "value": "接口",
  },
  {
    "range": {
      "end": {
        "column": 22,
        "line": 7,
      },
      "start": {
        "column": 22,
        "line": 7,
      },
    },
    "type": "DOT",
    "value": ".",
  },
  {
    "range": {
      "end": {
        "column": 23,
        "line": 7,
      },
      "start": {
        "column": 23,
        "line": 7,
      },
    },
    "type": "IDENTIFIER",
    "value": "名",
  },
  {
    "range": {
      "end": {
        "column": 24,
        "line": 7,
      },
      "start": {
        "column": 24,
        "line": 7,
      },
    },
    "type": "RIGHT_PAREN",
    "value": ")",
  },
]
`;

exports[`Token with config it should be identifier 1`] = `
[
  {
    "range": {
      "end": {
        "column": 3,
        "line": 1,
      },
      "start": {
        "column": 1,
        "line": 1,
      },
    },
    "type": "IDENTIFIER",
    "value": "abc",
  },
]
`;

exports[`Token with config it should be number 1`] = `
[
  {
    "range": {
      "end": {
        "column": 7,
        "line": 1,
      },
      "start": {
        "column": 1,
        "line": 1,
      },
    },
    "type": "NUMBER",
    "value": "1234.45",
  },
]
`;

exports[`Token with config it should be string 1`] = `
[
  {
    "range": {
      "end": {
        "column": 5,
        "line": 1,
      },
      "start": {
        "column": 1,
        "line": 1,
      },
    },
    "type": "STRING",
    "value": "'abc'",
  },
]
`;
